Fix for Spacing Issue

--- a/src/App.css
+++ b/src/App.css
@@ -81,15 +81,14 @@ body{
 /* Styles for the image container */
 .icon-image-container {
   display: flex;
-  min-height: 172px;
-  max-height: 100%;
+  height: 172px;
   padding: 18px;
-  margin: 18px;
   justify-content: center;
   align-items: center;
   gap: 8px;
   border-radius: 5px;
   align-self: stretch;
+  flex-grow: 1;
 }
 
 /* Styles for the icon image */
